impossible-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: impossible
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        cpu: "20"
        memory: "32Gi"
