nodeselector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: selector-demo
spec:
  nodeSelector:
    disk: hdd
  containers:
  - name: nginx
    image: nginx
