pod-config.yaml
apiVersion: v1

kind: Pod

metadata:
  name: config-demo

spec:

  containers:

  - name: demo

    image: busybox

    command:

    - sh

    - -c

    - |
      while true
      do
        echo APP_NAME=$APP_NAME
        echo APP_ENV=$APP_ENV
        sleep 10
      done
