pod-dev.yaml
apiVersion: v1

kind: Pod

metadata:

  name: nginx-dev

  namespace: dev

spec:

  containers:

  - name: nginx

    image: nginx
