pod-secret.yaml
apiVersion: v1

kind: Pod

metadata:

  name: secret-demo

spec:

  containers:

  - name: demo

    image: busybox:1.36

    command:

    - sh

    - -c

    - |

      while true

      do

        echo USER=$DB_USER

        echo PASSWORD=$DB_PASSWORD

        sleep 15

      done
