rolling.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: rolling-demo

spec:

  replicas: 3

  selector:

    matchLabels:

      app: rolling

  template:

    metadata:

      labels:

        app: rolling

    spec:

      containers:

      - name: nginx

        image: nginx:1.25

        ports:

        - containerPort: 80
