sa-pod.yaml
apiVersion: v1

kind: Pod

metadata:

  name: sa-demo

spec:

  serviceAccountName: app-sa

  containers:

  - name: nginx

    image: nginx
