securitycontext.yaml
apiVersion: v1

kind: Pod

metadata:

  name: security-demo

spec:

  containers:

  - name: nginx

    image: nginx

    securityContext:

      runAsUser: 1000

      runAsNonRoot: true

      readOnlyRootFilesystem: true

    volumeMounts:

    - name: nginx-cache

      mountPath: /var/cache/nginx

  volumes:

  - name: nginx-cache

    emptyDir: {}
