taint-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: taint-demo
spec:
  tolerations:
  - key: gpu
    operator: Equal
    value: "true"
    effect: NoSchedule
  containers:
  - name: nginx
    image: nginx
