ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: app-ingress
  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /
spec:

  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend

            port:

              number: 80

      - path: /api

        pathType: Prefix

        backend:

          service:

            name: backend

            port:

              number: 80
