allow-client.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:

  name: allow-client

  namespace: network-lab

spec:

  podSelector:

    matchLabels:

      app: web

  ingress:

  - from:

    - podSelector:

        matchLabels:

          client: "true"

  policyTypes:

  - Ingress
